--- a/dev/variables/variables-buttons.less
+++ b/dev/variables/variables-buttons.less
@@ -14,7 +14,7 @@
 @checkbox-color-hover:          white;
 @checkbox-background-checked:   #BBB;
 
-@wrap-submit-height-min:        56px;
+@wrap-submit-height-min:        58px;
 
 #basicbutton() {
 	margin: 0;
